quote flickering fixed quote

--- a/src/assets/styles/global_var.css
+++ b/src/assets/styles/global_var.css
@@ -16,7 +16,7 @@
   --catp_dark: #f4b8e4;
 
   /*literal fallback values*/
-  --body: none;
+  --body: #ffffff;
   --bg_0: #f5f5f5;
   --text: #303030;
   --sep:  #dedede;
